<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#E3E3E3"
        app:cardCornerRadius="20dp"
        android:layout_margin="8dp"
        android:id="@+id/cv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#5E1616"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivBookThumbnail"
                android:layout_width="130dp"
                android:layout_height="195dp"
                android:contentDescription="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/tvBookTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBookThumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBookAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivBookThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tvBookTitle" />

            <TextView
                android:id="@+id/tvBookPublisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/publisher"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivBookThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tvBookAuthor" />

            <TextView
                android:id="@+id/tvBookPublishedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/publishedDate"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivBookThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tvBookPublisher" />

            <TextView
                android:id="@+id/tvBookPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivBookThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tvBookPublishedDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvTextSnippet"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tvInfoLink"
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
