<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#651616"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="#700D0D"
        android:backgroundTint="@color/colorAccent">


        <EditText
            android:id="@+id/edtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#BCAC1C"
            android:hint="@string/inputHint"

            android:inputType="text"
            android:textColor="#F8F3F3"
            android:textColorHint="#F4F0F0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593"
            tools:layout_editor_absoluteX="0dp" />

        <Spinner
            android:id="@+id/spnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTilte"
            android:backgroundTint="#FFFF"
            android:entries="@array/languages"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <CheckBox
            android:id="@+id/cbOnlyPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FAEEEE"
            android:text="@string/onlyPurchase"

            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/edtBookName"
            tools:layout_editor_absoluteX="163dp" />

        <TextView
            android:id="@+id/tvQuantityBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/allBooks"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbOnlyPurchase" />

        <SeekBar
            android:id="@+id/sbQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#9A8D16"
            android:progressBackgroundTint="#B3A423"
            android:secondaryProgressTint="#DFD513"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantityBooks" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#C32F2F"
            android:text="@string/searchBook"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbQuantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>